--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,28 +18,30 @@
 
             <TextView
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_marginBottom="5dp"
+                android:padding="13dp"
+                android:autoSizeTextType="uniform"
                 android:background="@color/black"
                 android:fontFamily="serif"
                 android:text="Analog Simulator"
-                android:textColor="@color/white"
-                android:textAllCaps="true"
                 android:textAlignment="center"
-                android:autoSizeTextType="uniform"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
                 android:textSize="35dp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Select a circuit :"
+                android:layout_gravity="center"
                 android:gravity="center"
+                android:padding="15dp"
+                android:textStyle="bold"
+                android:text="Select a circuit :"
                 android:textColor="@color/black"
-                android:padding="5dp"
-                android:textSize="25sp"
-                android:layout_gravity="center"/>
+                android:textSize="25sp" />
 
         </LinearLayout>
 
@@ -65,27 +67,9 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:padding="17dp"
                     android:text="RC Circuit" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="fill_parent"
-                    android:layout_height="300dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/rl_circuit_18_2_14_2" />
-
-                <Button
-                    android:id="@+id/button4"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="RL Circuit" />
             </LinearLayout>
 
             <LinearLayout
@@ -100,10 +84,11 @@
                     android:src="@drawable/rlc" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/button2"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:padding="17dp"
                     android:text="RLC Circuit" />
             </LinearLayout>
 
@@ -116,14 +101,35 @@
                     android:layout_width="fill_parent"
                     android:layout_height="300dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/pres1" />
+                    android:src="@drawable/buck__1_" />
+
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:padding="17dp"
+                    android:text="Buck Convertor" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="fill_parent"
+                    android:layout_height="300dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/boost__1_" />
 
                 <Button
                     android:id="@+id/button4"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Image1 Text" />
+                    android:padding="17dp"
+                    android:text="Boost Convertor" />
             </LinearLayout>
 
 
