--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
 
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -56,19 +57,39 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+<!--                <TextView-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:background="#4CAF50"-->
+<!--                    android:gravity="center_horizontal"/>-->
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:background="#E91E63"
+                   />
+
                 <ImageView
                     android:layout_width="fill_parent"
                     android:layout_height="300dp"
+                    android:paddingHorizontal="27dp"
                     android:layout_gravity="center"
                     android:src="@drawable/rc_circuit" />
 
                 <Button
                     android:id="@+id/button1"
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:padding="17dp"
+                    android:layout_marginBottom="13dp"
                     android:text="RC Circuit" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:background="#E91E63"
+                    />
 
             </LinearLayout>
 
@@ -81,15 +102,23 @@
                     android:layout_width="fill_parent"
                     android:layout_height="300dp"
                     android:layout_gravity="center"
+                    android:paddingHorizontal="27dp"
                     android:src="@drawable/rlc" />
 
                 <Button
                     android:id="@+id/button2"
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:padding="17dp"
+                    android:layout_marginBottom="13dp"
                     android:text="RLC Circuit" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:background="#E91E63"
+                    />
             </LinearLayout>
 
             <LinearLayout
@@ -101,15 +130,23 @@
                     android:layout_width="fill_parent"
                     android:layout_height="300dp"
                     android:layout_gravity="center"
+                    android:paddingHorizontal="27dp"
                     android:src="@drawable/buck__1_" />
 
                 <Button
                     android:id="@+id/button3"
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:padding="17dp"
+                    android:layout_marginBottom="13dp"
                     android:text="Buck Convertor" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:background="#E91E63"
+                    />
             </LinearLayout>
 
             <LinearLayout
@@ -120,16 +157,24 @@
                 <ImageView
                     android:layout_width="fill_parent"
                     android:layout_height="300dp"
+                    android:paddingRight="27dp"
                     android:layout_gravity="center"
                     android:src="@drawable/boost__1_" />
 
                 <Button
                     android:id="@+id/button4"
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:padding="17dp"
+                    android:layout_marginBottom="13dp"
                     android:text="Boost Convertor" />
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:background="#E91E63"
+                    />
             </LinearLayout>
 
 
